--- a/Doc/Bachelor Thesis/references.bib
+++ b/Doc/Bachelor Thesis/references.bib
@@ -83,3 +83,12 @@
 	date = {2015},
 	url = {https://wordnet.princeton.edu/},
 }
+
+@book{Maier,
+	author    = {David Maier},
+	title     = {The Theory of Relational Databases},
+	publisher = {Computer Science Press},
+	year      = {1983},
+	isbn      = {0-914894-42-0},
+	bibsource = {DBLP, http://dblp.uni-trier.de}
+}
